--- a/Sleep Disorder Prediction.ipynb
+++ b/Sleep Disorder Prediction.ipynb
@@ -271,72 +271,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Person ID': array([  1,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12,  13,\n",
-      "        14,  15,  16,  17,  18,  19,  20,  21,  22,  23,  24,  25,  26,\n",
-      "        27,  28,  29,  30,  31,  32,  33,  34,  35,  36,  37,  38,  39,\n",
-      "        40,  41,  42,  43,  44,  45,  46,  47,  48,  49,  50,  51,  52,\n",
-      "        53,  54,  55,  56,  57,  58,  59,  60,  61,  62,  63,  64,  65,\n",
-      "        66,  67,  68,  69,  70,  71,  72,  73,  74,  75,  76,  77,  78,\n",
-      "        79,  80,  81,  82,  83,  84,  85,  86,  87,  88,  89,  90,  91,\n",
-      "        92,  93,  94,  95,  96,  97,  98,  99, 100, 101, 102, 103, 104,\n",
-      "       105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117,\n",
-      "       118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130,\n",
-      "       131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143,\n",
-      "       144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156,\n",
-      "       157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169,\n",
-      "       170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182,\n",
-      "       183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195,\n",
-      "       196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208,\n",
-      "       209, 210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 220, 221,\n",
-      "       222, 223, 224, 225, 226, 227, 228, 229, 230, 231, 232, 233, 234,\n",
-      "       235, 236, 237, 238, 239, 240, 241, 242, 243, 244, 245, 246, 247,\n",
-      "       248, 249, 250, 251, 252, 253, 254, 255, 256, 257, 258, 259, 260,\n",
-      "       261, 262, 263, 264, 265, 266, 267, 268, 269, 270, 271, 272, 273,\n",
-      "       274, 275, 276, 277, 278, 279, 280, 281, 282, 283, 284, 285, 286,\n",
-      "       287, 288, 289, 290, 291, 292, 293, 294, 295, 296, 297, 298, 299,\n",
-      "       300, 301, 302, 303, 304, 305, 306, 307, 308, 309, 310, 311, 312,\n",
-      "       313, 314, 315, 316, 317, 318, 319, 320, 321, 322, 323, 324, 325,\n",
-      "       326, 327, 328, 329, 330, 331, 332, 333, 334, 335, 336, 337, 338,\n",
-      "       339, 340, 341, 342, 343, 344, 345, 346, 347, 348, 349, 350, 351,\n",
-      "       352, 353, 354, 355, 356, 357, 358, 359, 360, 361, 362, 363, 364,\n",
-      "       365, 366, 367, 368, 369, 370, 371, 372, 373, 374], dtype=int64)}\n",
-      "{'Gender': array(['Male', 'Female'], dtype=object)}\n",
-      "{'Age': array([27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43,\n",
-      "       44, 45, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59],\n",
-      "      dtype=int64)}\n",
-      "{'Occupation': array(['Software Engineer', 'Doctor', 'Sales Representative', 'Teacher',\n",
-      "       'Nurse', 'Engineer', 'Accountant', 'Scientist', 'Lawyer',\n",
-      "       'Salesperson', 'Manager'], dtype=object)}\n",
-      "{'Sleep Duration': array([6.1, 6.2, 5.9, 6.3, 7.8, 6. , 6.5, 7.6, 7.7, 7.9, 6.4, 7.5, 7.2,\n",
-      "       5.8, 6.7, 7.3, 7.4, 7.1, 6.6, 6.9, 8. , 6.8, 8.1, 8.3, 8.5, 8.4,\n",
-      "       8.2])}\n",
-      "{'Quality of Sleep': array([6, 4, 7, 5, 8, 9], dtype=int64)}\n",
-      "{'Physical Activity Level': array([42, 60, 30, 40, 75, 35, 45, 50, 32, 70, 80, 55, 90, 47, 65, 85],\n",
-      "      dtype=int64)}\n",
-      "{'Stress Level': array([6, 8, 7, 4, 3, 5], dtype=int64)}\n",
-      "{'BMI Category': array(['Overweight', 'Normal', 'Obese', 'Normal Weight'], dtype=object)}\n",
-      "{'Blood Pressure': array(['126/83', '125/80', '140/90', '120/80', '132/87', '130/86',\n",
-      "       '117/76', '118/76', '128/85', '131/86', '128/84', '115/75',\n",
-      "       '135/88', '129/84', '130/85', '115/78', '119/77', '121/79',\n",
-      "       '125/82', '135/90', '122/80', '142/92', '140/95', '139/91',\n",
-      "       '118/75'], dtype=object)}\n",
-      "{'Heart Rate': array([77, 75, 85, 82, 70, 80, 78, 69, 72, 68, 76, 81, 65, 84, 74, 67, 73,\n",
-      "       83, 86], dtype=int64)}\n",
-      "{'Daily Steps': array([ 4200, 10000,  3000,  3500,  8000,  4000,  4100,  6800,  5000,\n",
-      "        7000,  5500,  5200,  5600,  3300,  4800,  7500,  7300,  6200,\n",
-      "        6000,  3700], dtype=int64)}\n",
-      "{'Sleep Disorder': array(['None', 'Sleep Apnea', 'Insomnia'], dtype=object)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in s.columns:    # HERE WE ARE CHECKING THE UNIQUE VALUES PRESENT IN THE DATA\n",
-    "    print({i:s[i].unique()})"
+    "#replacing the null values with 'None' in the column 'Sleep Disorder'\n",
+    "s['Sleep Disorder'].fillna('None', inplace=True)"
    ]
   },
   {
@@ -623,54 +561,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The EDA is divided into two phases:\n",
-    "\n",
-    "Phase 1:  Understanding the data by plotting its variables\n",
-    "\n",
-    "Phase 2: Understanding the correlation between the variables"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Phase 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "fig,ax = plt.subplots(3,3,figsize=(20,10))\n",
-    "sns.countplot(x = 'Gender', data = df, ax = ax[0,0])\n",
-    "sns.histplot(x = 'Age', data = df, ax = ax[0,1], bins = 10)\n",
-    "sns.histplot(x = 'Sleep Duration', data = df, ax = ax[0,2], bins = 10)\n",
-    "sns.countplot(x = 'Quality of Sleep', data = df, ax = ax[1,0])\n",
-    "sns.histplot(x = 'Physical Activity Level', data = df, ax = ax[1,1], bins = 10)\n",
-    "sns.countplot(x = 'Stress Level', data = df, ax = ax[1,2])\n",
-    "sns.countplot(x = 'BMI Category', data = df, ax = ax[2,0])\n",
-    "sns.histplot(x = 'Daily Steps', data = df, ax = ax[2,1], bins = 10)\n",
-    "sns.countplot(x = 'Sleep Disorder', data = df, ax = ax[2,2])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The number of males and females is almost equal, out of which majority of the people have age between 30-45 years. Most of the people have sleep quality greater than 5 which means there are getting sufficient sleep. Moreover, most of the people have normal BMI whci directly relates with the distribution of sleep disorder which shows equal number of people with and without sleep disorder."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Phase 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Gender and Sleep Disorder"
    ]
   },
@@ -881,7 +771,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f03b6c7d08>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1ad6fc0bf88>"
       ]
      },
      "execution_count": 16,
